<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alan.colemancarrepairs.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:id="@+id/imageView"
        android:layout_marginBottom="38dp"
        android:layout_above="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/logo_for_coleman_car_repairs" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_coleman_car_repairs_we_hope_you_find_what_you_re_looking_for"
        android:id="@+id/textView"
        android:layout_marginBottom="32dp"
        android:layout_above="@+id/emailbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="Send an email to receive an estimate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailbutton"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_above="@+id/towbarbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onButtonClick (MainActivity)" />

    <Button
        android:text="@string/click_here_to_see_our_collection_of_towbars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/towbarbutton"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_marginBottom="69dp"
        android:layout_alignBottom="@+id/contactbutton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onButtonClick (MainActivity)" />

    <Button
        android:text="@string/contact_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contactbutton"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_marginBottom="61dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onButtonClick (MainActivity)" />

</RelativeLayout>
